# src/routes/messages/messages.validators.ts
@@ -1,0 +1,8 @@
+import { body, param } from "express-validator";
+
+export const validateGetMessages = [
+  param("projectId").isUUID(),
+  param("conversationId").isUUID(),
+];
+
+export const validateCreateMessage = [];
